--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@yamada-ui/react": "^1.3.10",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.2.2",
+    "immer": "^10.1.1",
     "lucide-react": "^0.378.0",
     "microcms-js-sdk": "^3.1.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
