--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "styled-components": "^6.1.11",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
